academic CV, resume, and research statement

--- a/resume_2018/academic_CV_2018.tex
+++ b/resume_2018/academic_CV_2018.tex
@@ -252,6 +252,7 @@ The new framework processes datasets 10 times larger than the previous one, auto
 \item Languages: C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), BASH shell script, R, VBA, \LaTeX, HTML, Markdown
 \item Framework: ROOT, HistFitter
 \item Database: SQL
+\item Machine learning: linear and logistic regression, decision tree, bagging, random forest, Ada boost, gradient boosted tree, dimension reduction, kNN, kMeans
 \item Tools: Git, SVN, Vim, MicroSoft Office, Apple Pages/Numbers/Keynote
 % \item Machin Learning: kNN, linear/logistic regression, decision tree, SVM, k-Means
 \item OS: Mac, Linux, Unix, Windows
