--- a/resume_2018/academic_cover_letter_2018.tex
+++ b/resume_2018/academic_cover_letter_2018.tex
@@ -15,20 +15,19 @@
 % VARIABLES
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\CompanyName}{Department of Physics}
-\newcommand{\CompanyAddress}{Southern Methodist University\\
-3215 Daniel Ave.\\
-Dallas, Texas 75275-0175}
+\newcommand{\CompanyName}{Princeton University}
+\newcommand{\CompanyAddress}{Princeton, NJ 08544\\
+USA}
 
-\newcommand{\JobPositionName}{postdoctoral fellow position at the Department of Physics at SMU} 
+\newcommand{\JobPositionName}{postdoctoral position to work on computational high energy physics at Princeton University} 
 % \newcommand{\ManagerName}{To Whom It May Concern,}
-\newcommand{\ManagerName}{Dear Prof. Stroynowski,}
+\newcommand{\ManagerName}{Dear Dr. Elmer,}
 % \newcommand{\ClosingWords}{Yours faithfully,} % 非以對方姓氏稱呼對方時
 \newcommand{\ClosingWords}{Yours sincerely,} % 知道對方姓氏時
 
 \newcommand{\MyFirstName}{Yu-Ting}
 \newcommand{\MyLastName}{Shen}
-\newcommand{\MyAddress}{Norman, OK 73019}
+\newcommand{\MyAddress}{Norman, OK 73019, USA}
 \newcommand{\MyPhoneNumber}{+1~(450)~200~2633}
 \newcommand{\MyEmail}{YuTing.Shen-1@ou.edu}
 
@@ -62,6 +61,7 @@ I am writing to apply for the \JobPositionName{}.
 I received my Ph.D. degree from the University of Oklahoma in May 2018 and currently look for a postdoctoral research position in the field of high energy physics experiment.
 In the past three years, I was relocated at CERN working on my dissertation research.
 I am familiar with C++ and Python programming, experimental data analysis using ROOT, and the ATLAS environment.
+I am also interested in data analysis, software development, and machine learning techniques.
 I am confident that my background makes me fit this challenging position and I would be a valuable addition to your team.
 Thank you for your consideration. I look forward to hearing from you.
 
