--- a/resume_2018/academic_research_statement.tex
+++ b/resume_2018/academic_research_statement.tex
@@ -76,7 +76,7 @@ Finally, the cross-section at next-to-leading-logarithm (NLL) accuracy was estim
 \subsection{Earlier research experience}
 I was an active member (2009 to 2011) of TEXONO collaboration at Department of Physics in Academia Sinica.
 The TEXONO experiment aimed to measure the neutrino coming from the nuclear reactor at Kuosheng Nuclear Power Plant in Taiwan.
-My main duty in TEXNON was using GEANT4 package to develop the simulation program of the high purity germanium detector and studied the ambient background radiation.
+My main duty in TEXONO was using GEANT4 package to develop the simulation program of the high purity germanium detector and studied the ambient background radiation.
 I also had one month business trip to China to help Tsinghua university to build the the China Jinping Underground Laboratory (CJPL).
 
 My Masters period (2003 to 2006) was working on the $B$-physics at the Belle experiment.
@@ -98,13 +98,32 @@ I have been applying the machine learning models such as linear regression, logi
 %%%%%%%%%%%%%%%%%%%%
 
 \section{Future Directions}
-In the future I would like to continue working in the topic of searching for the SUSY particles in the compress scenario for the NUHM2 interpretation.
-This study is aimed for the summer conference and we got approval for submitting the requests to produce the official MC production a couple weeks ago.
-I would also plan to employ the machine leaning technologies to the experimental datasets to improve the analysis accuracy and precision.
+%% SMU
+% In the future I would like to continue working in the topic of searching for the electroweak produced SUSY particles in the compress scenario for the NUHM2 interpretation.
+% This study is aimed for the summer conference and we got approval for submitting the requests to produce the official MC production a couple weeks ago.
+% I would also plan to employ the machine leaning technologies to the experimental datasets to improve the analysis accuracy and precision.
+%
+% Furthermore I am also interested to work in the new physics beyond the Standard Model and the precision measurement of Higgs properties.
+% I had some experiences of taking inner detector ACR shift and would like to  involved in the hardware upgrades such as LAr and TDAQ system.
 
-% SMU
-Furthermore I am also interested to work in the new physics beyond the Standard Model and the precision measurement of Higgs properties.
-I had some experiences of taking inner detector ACR shift and would like to  involved in the hardware upgrades such as LAr and TDAQ system.
+%% Stockholm University 
+% In the future I would like to continue working in the topic of searching for the electroweak produced SUSY particles in the compress scenario for the NUHM2 interpretation.
+% This study is aimed for the summer conference and we got approval for submitting the requests to produce the official MC production a couple weeks ago.
+% I would also plan to employ the machine leaning technologies to the experimental datasets to improve the analysis accuracy and precision.
+%
+% Furthermore I am also interested to work in the new physics beyond the Standard Model, or dark matter and top physics.
+% I had some experiences of taking inner detector ACR shift and would like to participate in the construction, commissioning and calibration the Tile Calorimeter and the L1 Trigger system.
+% I want to contribute to the combined performance groups such as E/gamma, flavour tagging and Jet/Etmiss groups.
+
+%% BNL
+In the future I would like to continue working in the topic of searching for the electroweak produced SUSY particles in the compress scenario for the NUHM2 interpretation.
+This study is aimed for the summer conference and we got approval for submitting the requests to produce the official MC production a couple weeks ago.
+I would also plan to leverage the machine leaning technologies to the experimental datasets to improve the analysis accuracy and precision.
+Furthermore I am also interested to work in the new physics beyond the Standard Model and the software development for the data analysis using high performance computing.
+%% Princeton
+% I am interested in data analysis, software development, and machine learning techniques.
+% I would like to work on the investigations of charged particle tracking reconstruction on parallel processor architectures and research into highly performant data analysis systems.
+% I am also interested in working on developing large scale data analysis software application and applying machine learning techniques to high energy physics.
 %
 My background and experience in the particle physics has built a solid ground for pursuing my academic career in physics.
 I am very interested in working with your group and am confident that I would be a valuable addition.
