--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -35,31 +35,48 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     OBJECTIVE
+%     QUALIFICATIONS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \section{Objective}
+\vspace{-0.3cm}
+
+\section{Qualifications}
+\location{}
+\vspace{-0.4cm}
+% 主要分成四大類：學歷，程式/軟體，機器學習/統計/機率，資料庫，軟技巧
+\begin{tightemize}
+\item Ph.D. degree in Physics with 5-years experience in data analysis, data visualization, machine learning, and statistics.
+\item Strong programming skills in Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), R,  C/C++, and BASH shell script.
+% Familiar with Python packages for data analysis.
+\item Proficient in data manipulation using SQL and Pandas.
+Experiences of using Spark.
+\item Deep understanding of machine learning and hands-on experience in constructing and validating predictive models.
+\item Strong knowledge and daily experiences on using UNIX/Linux operating systems and Git version control.
+\item Good documentation and communication skills.
+Ability to explain complex concepts to wide range of audiences.
+\item Strong analytic and problem-solving skills through critical thinking, teamwork with colleagues.
+\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % FOR RESUME
-\section{Skills}
+% \section{Skills}
 
-\raggedright{
-    Programming Language:
-    C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), R, BASH shell script\\
-    Machine Learning: data scraping, feature engineering, classification, linear/logistic regression, decision tree, clustering, NLP\\
-    Statistics:
-    Regression (LSE/MLE), Confidence intervals, Monte Carlo method, Hypothesis test, A/B test, bootstrapping, Bayesian\\
-    Version Control:
-    Git
-    \textbullet{}
-    Database:
-    SQL\\
-}
-\sectionsep
+% \raggedright{
+%     Programming Language:
+%     C/C++, Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), R, BASH shell script\\
+%     Machine Learning: data mining, feature engineering, classification, linear/logistic regression, decision tree, clustering, NLP\\
+%     Statistics:
+%     Regression (LSE/MLE), Confidence intervals, Monte Carlo method, Hypothesis test, A/B test, bootstrapping, Bayesian\\
+%     Version Control:
+%     Git
+%     \textbullet{}
+%     Database:
+%     SQL\\
+% }
+% \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
@@ -83,14 +100,21 @@
 \runsubsection{The European Organization for Nuclear Research (CERN)}
 % \descript{| Graduate Research Assistant}
 % \location{Geneva, Switzerland | 2015 - 2018}
-\descript{Research Assistant}
+\descript{Research Associate}
 \location{Geneva, Swiss | 2015 - 2018}
 \begin{tightemize}
 % FOR RESUME
+\item Performed data mining from the distributed LHC computing Grid using Python and BASH shell script.
+\item Built data cleaning and processing pipeline to analyze data, visualize distributions, and select features.
+\item Optimized the data selection processes and improved key performance metrics using decision tree algorithm.
+% \item Performed model fitting using unbinned maximum likelihood and applied statistical methods to extract signal within 95\% confidence interval.
+\item Performed model fitting and applied statistical methods to extract signal within 95\% confidence interval.
+\item Developed a method to calibrate the electron isolation efficiency and became the standard version of the collaboration.
+\item Constructed classification model and improved the true positive rate of isolated electrons from 0.85 to 0.93.
 % \item Performed the data mining from the distributed LHC computing Grid, applied data cleaning and feature engineering to select the significant data, visualized the data distributions, fitted the model using least chi-square regression, interpreted the results using statistical model within 95\% confidence intervals, and presented and documented the analysis findings.
-\item Analyzed 30M+ events to improve the true positive rate of isolated electrons from 0.85 to 0.93 and the calibrated electron isolation efficiency became the standard version of the collaboration.
-\item Implemented the decision tree based methods to maximize the significance and optimized the data selection processes.
-\item Built data cleaning and processing pipeline to analyze the data and performed an unbinned maximum likelihood fit to extract signal within 95\% confidence interval.
+% \item Analyzed 30M+ events to improve the true positive rate of isolated electrons from 0.85 to 0.93 and the calibrated electron isolation efficiency became the standard version of the collaboration.
+% \item Implemented the decision tree based methods to maximize the significance and optimized the data selection processes.
+% \item Built data cleaning and processing pipeline to analyze the data and performed an unbinned maximum likelihood fit to extract signal within 95\% confidence interval.
 % \item Calibrated the electron isolation efficiency by analyzing 30M+ events and became the standard version of the collaboration. %The results became a central released version of the collaboration.
 % \item Mined and cleaned data from the distributed LHC computing Grid over 170 computing centers in 42 countries using Rucio.
 % \item Mined data from Grid and wrote data filtering algorithm to reduce the data size from $\sim$400 TB to less than 200 GB and signficantly speed up processing time of data analysis.
@@ -98,6 +122,9 @@
 % \item Produced Monte Carlo (MC) simulation datasets and performed exploratory data analysis (EDA) on MC datasets.
 % Applied muti-dimensional least Chi-square fit to extract signal events, performed statistical interpretations to validate model or rule out the model parameter space (i.e. model fitting and statistics hypothesis test).
 % \item Analyzed $\sim$200 GB large datasets with 400+ variables per file and $\sim$30M entries in total by performing exploratory data analysis (EDA), feature processing and engineering, least square estimation (LSE) and maximum likelihood estimation (MLE) model fitting, and statistics hypothesis test.
+% \item Classified particles using decision tree based methods to improve the real lepton identification efficiency from 80\% to 98\%.
+% \item Designed data filtration algorithms in C++ reducing the data size from $\sim$400 TB to less than 200 GB.%by a factor of 100.
+% \item Developed a new framework to reduce the run time from one week manual operations to 5 hours automation.
 \end{tightemize}
 \sectionsep
 
@@ -105,8 +132,12 @@
 \descript{Research Assistant}
 \location{Taipei, Taiwan | 2009 - 2011}
 \begin{tightemize}
-\item Discovered serious bugs and redesigned Monte Carlo simulation programs using C++ to improve the accuracy.
-\item Used decision tree based methods to classify background sources and reduced the major background events by 50\%.
+\item Performed exploratory data analysis on simulated data and discovered serious bugs in simulation programs.
+\item Programmed in C++ to redesign a bug-free Monte Carlo simulation programs.
+% \item Discovered serious bugs and redesigned Monte Carlo simulation programs using C++ to improve the accuracy.
+\item Developed a new classification model by implementing decision tree algorithm.
+\item Used machine learning model to improve the accuracy of signal and background identification and reduced the major background events by 50\%. 
+% \item Used decision tree based methods to classify background sources and reduced the major background events by 50\%.
 % \item Classified different background using decision tree based methods, automated the analysis results visualization processes, and reported the finding.
 \end{tightemize}
 \sectionsep
@@ -115,9 +146,14 @@
 \descript{R\&D engineer}
 \location{Hsinchu, Taiwan | 2006 - 2009}
 \begin{tightemize}
-\item Completed an urgent project 2 months ahead of the normal schedule and saved the contract.
-\item Programmed measurement system to automate data collection processes and reduced 30\% of manual operations time.
-\item Led and supported 7 projects to build device models using regression, visualized and documented the results for customers.
+% \item Led and supported 7 projects to build device models using regression, visualized and documented the results for customers.
+\item Built analysis pipeline to clean and visualize data.
+% \item Implemented regression algorithm to fit data and applied statistics on the measured data to validate the regression model.
+\item Implemented regression algorithm to fit data and validated model with advanced statistical method.
+\item Programmed measurement system to automate data collection processes and reduced 30\% of manual-operation time.
+% \item Led and supported 7 projects to build device models and documented the results for customers.
+\item Coordinated effictively with cross-functional teams and customers to resolve issues by tight deadlines.
+% \item Completed an urgent project 2 months ahead of the normal schedule and saved the contract.
 % \item Led and supported 7 projects, performed model parameterization, validation, visualization, documentation, and provided customer support.
 \end{tightemize}
 \sectionsep
@@ -129,47 +165,62 @@
 % % FOR RESUME
 \section{Projects}
 
-% \runsubsection{project name}
-% \descript{}
-% %\location{}
+\runsubsection{project name}
+\descript{}
+%\location{}
+\begin{tightemize}
+\item What I did on the project which is most important
+\item 2
+\item 3
+\item 4
+\item 5
+\end{tightemize}
+\sectionsep
+
+\runsubsection{project name}
+\descript{}
+%\location{}
+\begin{tightemize}
+\item What I did on the project which is most important
+\item 2
+\item 3
+\item 4
+\end{tightemize}
+\sectionsep
+
+% \runsubsection{Real Lepton Efficiency}
+% \location{}
 % \begin{tightemize}
-% \item What I did on the project which is most important
+% \item Classified particles using decision tree based methods to improve the real lepton identification efficiency from 80\% to 98\%.
+% \item Designed data filtration algorithms in C++ reducing the data size from $\sim$400 TB to less than 200 GB.%by a factor of 100.
+% \item Developed a new framework to reduce the run time from one week manual operations to 5 hours automation.
 % \end{tightemize}
 % \sectionsep
 
-\runsubsection{Real Lepton Efficiency}
-\location{}
-\begin{tightemize}
-\item Classified particles using decision tree based methods to improve the real lepton identification efficiency from 80\% to 98\%.
-\item Designed data filtration algorithms in C++ reducing the data size from $\sim$400 TB to less than 200 GB.%by a factor of 100.
-\item Developed a new framework to reduce the run time from one week manual operations to 5 hours automation.
-\end{tightemize}
-\sectionsep
+% \runsubsection{Capital Bikeshare Rental Demand}
+% \location{}
+% \begin{tightemize}
+% \item Performed feature selection and engineering to remove 3 standard deviations outliers and created new datetime features.
+% \item Visualized the weather information and imputed missing data using the random forest model based estimation.
+% \item Used random forest model to predict the total count of bikes rented during each hour of the last 10 days in each month.
+% \end{tightemize}
+% \sectionsep
 
-\runsubsection{Capital Bikeshare Rental Demand}
-\location{}
-\begin{tightemize}
-\item Performed feature selection and engineering to remove 3 standard deviations outliers and created new datetime features.
-\item Visualized the weather information and imputed missing data using the random forest model based estimation.
-\item Used random forest model to predict the total count of bikes rented during each hour of the last 10 days in each month.
-\end{tightemize}
-\sectionsep
+% \runsubsection{Upstart 3-year Terms Loan Charged-off Rate Prediction}
+% \location{}
+% \begin{tightemize}
+% \item Analyzed 50,000 loans with different repayment status within two years to extract the monthly default rate.
+% \item Predicted the charged-off rate by the time all 3-year terms finished using linear regression.
+% \end{tightemize}
+% \sectionsep
 
-\runsubsection{Upstart 3-year Terms Loan Charged-off Rate Prediction}
-\location{}
-\begin{tightemize}
-\item Analyzed 50,000 loans with different repayment status within two years to extract the monthly default rate.
-\item Predicted the charged-off rate by the time all 3-year terms finished using linear regression.
-\end{tightemize}
-\sectionsep
-
-\runsubsection{INSPIRE HEP PostDoc Position in North America}
-\location{}
-\begin{tightemize}
-\item Scraped website using Beautiful Soup and converted results into SQL database using sqlalchemy.
-\item Leveraged natural language processing (NLP) and machine learning to predict institution participants in experiments.
-\end{tightemize}
-\sectionsep
+% \runsubsection{INSPIRE HEP PostDoc Position in North America}
+% \location{}
+% \begin{tightemize}
+% \item Scraped website using Beautiful Soup and converted results into SQL database using sqlalchemy.
+% \item Leveraged natural language processing (NLP) and machine learning to predict institution participants in experiments.
+% \end{tightemize}
+% \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
