--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -21,6 +21,8 @@
 % \newcommand{\CompanyAddress}{San Francisco, CA}
 % \newcommand{\CompanyAddress}{Seattle, WA}
 \newcommand{\JobPositionName}{Data Scientist}
+% \newcommand{\JobPositionName}{Data Analyst}
+% \newcommand{\JobPositionName}{Machine Learning Engineer}
 % \newcommand{\ManagerName}{Madam or Sir to whom it may concern:}
 \newcommand{\ManagerName}{Hiring Manager,}
 \newcommand{\ClosingWords}{Yours faithfully,} % 非以對方姓氏稱呼對方時
