--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -55,9 +55,9 @@
 % \item Deep understanding of machine learning and hands-on experience in constructing and validating predictive models.
 % \item Solid knowledge of neural network (FFNN/RNN/LSTM/CNN) and pratice experience in using Keras and Tensorflow.
 % \item Advanced-level knowledge and daily experiences on using UNIX/Linux operating systems and Git version control.
-\item Passionate about discovering insights lie hidden in data and able to tell the story of data to non-experts.
+\item Passionate about discovering insights hidden in data in order to tell the story of data to non-experts.
 % \item Superior documentation and communication skills with the ability to explain complex concepts to wide range of audiences.
-\item Excellent analytic and problem-solving skills through critical thinking, teamwork with colleagues.
+\item Excellent analytic and problem-solving skills through critical thinking, and teamwork with colleagues.
 \end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -119,7 +119,7 @@
 \item Built regression model and applied statistical methods to extract signal within 95\% confidence interval.
 % \item Developed a new method to calibrate the electron isolation efficiency and became the standard version of the collaboration.
 % \item Constructed classification model and improved the true positive rate of isolated electrons from 0.85 to 0.93.
-\item Improve true positive rate from 0.85 to 0.93 by developing a new classification model for the electron isolation efficiency and became the standard version of the collaboration.
+\item Improve true positive rate from 0.85 to 0.93 by developing a new classification model for the electron isolation efficiency which became the standard version for the collaboration.
 
 % \item Performed the data mining from the distributed LHC computing Grid, applied data cleaning and feature engineering to select the significant data, visualized the data distributions, fitted the model using least chi-square regression, interpreted the results using statistical model within 95\% confidence intervals, and presented and documented the analysis findings.
 % \item Analyzed 30M+ events to improve the true positive rate of isolated electrons from 0.85 to 0.93 and the calibrated electron isolation efficiency became the standard version of the collaboration.
@@ -143,7 +143,7 @@
 \location{Taipei, Taiwan | 2009 - 2011}
 \begin{tightemize}
 \item Discovered serious bugs in simulation programs by performing exploratory data analysis on simulated data.
-Programmed in C++ to redesign a bug-free Monte Carlo simulation programs.
+Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
 \item Improved 50\% of the signal significance by devising a new classification model.
 % \item Performed exploratory data analysis on simulated data and discovered serious bugs in simulation programs.
 % \item Discovered serious bugs and redesigned Monte Carlo simulation programs using C++ to improve the accuracy.
@@ -160,7 +160,7 @@ Programmed in C++ to redesign a bug-free Monte Carlo simulation programs.
 \location{Hsinchu, Taiwan | 2006 - 2009}
 \begin{tightemize}
 \item Led and supported 7 projects of various device models and built model performance documents for clients.
-\item Coordinated effectively with cross-functional teams and clients to resolve issues by tight deadlines.
+\item Coordinated effectively with cross-functional teams and clients to resolve issues with tight deadlines.
 % \item Programmed measurement system to automate data collection processes and reduced 30\% of manual-operation time.
 % \item Implemented regression algorithm for data fitting and validated model with advanced statistical method.
 % \item Led and supported 7 projects to build device models using regression, visualized and documented the results for customers.
@@ -196,7 +196,7 @@ Programmed in C++ to redesign a bug-free Monte Carlo simulation programs.
 \descript{}
 \location{}
 \begin{tightemize}
-\item Build a restaurant recommender system to recommend top 5 restaurants using item-item similarity based collaborative filtering and matrix factorization based on users’ past visits and ratings.
+\item Built a restaurant recommender system to recommend top 5 restaurants using item-item similarity based collaborative filtering and matrix factorization based on users’ past visits and ratings.
 \item Applied natural language processing (NLP) and sentiment analysis techniques to classify the positive and negative reviews, being able to understand business performance based on users' reviews.
 \item Identified and understood the common user preference by clustering users into groups and inspecting the cluster centroid of each group.
 \end{tightemize}
