--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -20,6 +20,7 @@
 \newcommand{\CompanyAddress}{City, State}
 % \newcommand{\CompanyAddress}{San Francisco, CA}
 % \newcommand{\CompanyAddress}{Seattle, WA}
+% \newcommand{\CompanyAddress}{New York, State}
 \newcommand{\JobPositionName}{Data Scientist}
 % \newcommand{\JobPositionName}{Data Analyst}
 % \newcommand{\JobPositionName}{Machine Learning Engineer}
