--- a/resume_2018/resume_2018.tex
+++ b/resume_2018/resume_2018.tex
@@ -45,19 +45,20 @@
 \vspace{-0.4cm}
 % 主要分成四大類：學歷，程式/軟體，機器學習/統計/機率，資料庫，軟技巧
 \begin{tightemize}
+\item Ph.D. degree with experience in large-scale data analysis and machine learning to build predictive models.
+\item Proficient in Python, C/C++, SQL and shell script.
+\item Experienced in Keras, TensorFlow, Spark, and Hadoop.
+\item Passionate about discovering insights hidden in data in order to tell the story of data to non-experts.
+\item Excellent analytic and problem-solving skills through critical thinking, and teamwork with colleagues.
 % \item Ph.D. degree in Physics with 5-years experience in large-scale data analysis, data visualization, machine learning, modeling and statistics through Python, C/C++, and BASH shell script.
 % \item Strong programming skills in Python (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn), R,  C/C++, and BASH shell script.
 % \item Familiar with Python packages for data analysis and machine learning (pandas/numpy/scipy/scikit-learn/matplotlib/seaborn).
 % \item Proficient in data manipulation using SQL and Pandas
 % \item Experiences in Spark and knowledge of Hadoop and Hive.
-\item Ph.D. degree with experience in large-scale data analysis and machine learning to build predictive models.
-\item Proficient in Python, C/C++, SQL and shell script. Experienced in Keras, TensorFlow, Spark, and Hadoop.
 % \item Deep understanding of machine learning and hands-on experience in constructing and validating predictive models.
 % \item Solid knowledge of neural network (FFNN/RNN/LSTM/CNN) and pratice experience in using Keras and Tensorflow.
 % \item Advanced-level knowledge and daily experiences on using UNIX/Linux operating systems and Git version control.
-\item Passionate about discovering insights hidden in data in order to tell the story of data to non-experts.
 % \item Superior documentation and communication skills with the ability to explain complex concepts to wide range of audiences.
-\item Excellent analytic and problem-solving skills through critical thinking, and teamwork with colleagues.
 \end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -82,34 +83,66 @@
 % \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Project
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Side Projects}
+\runsubsection{Build recommender system using Yelp data challenge round 12 dataset}
+\descript{}
+\location{}
+\begin{tightemize}
+\item Built a restaurant recommender system to recommend top 5 restaurants using item-item similarity based collaborative filtering and matrix factorization based on users’ past visits and ratings.
+\item Applied natural language processing (NLP) and sentiment analysis techniques to classify the positive and negative reviews, being able to understand business performance based on users' reviews.
+\item Identified and understood the common user preference by clustering users into groups and inspecting the cluster centroid of each group.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Sequence-to-sequence natural language generation with deep neural networks}
+\descript{}
+\location{}
+\begin{tightemize}
+\item Collected large amount of dirty textual data from the Internet and processed data for the text generation.
+\item Used TensorFlow to construct a sequence-to-sequence model using RNN architecture with LSTM cells.
+\item Designed an end-to-end training procedure to achieve data-driven language modeling for the generation of poems by training more than 40,000 poems.
+\item Conducted parameters tuning and used GPU acceleration to obtain optimal speed for training the deep neural networks.
+\end{tightemize}
+\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
 
-% \runsubsection{University of Oklahoma}
-% \descript{PostDoc Researcher}
-% \location{2011 - 2018 | Norman, Oklahoma}
-% \begin{tightemize}
+\runsubsection{University of Oklahoma}
+\descript{PostDoc Researcher}
+\location{Norman, OK | 2018/07 - present }
+\begin{tightemize}
+\item Investigated 1M+ new experimental records to improve model prediction precision by uncovering the hidden relation between momentum and TPR.
+\item Generated Monte Carlo simulation data and extracted useful features by applying feature engineering.
+% \item Builted decision tree model and use simulated data to train model.
 % % FOR RESUME & CV
 % \item 6 semesters teaching assistant for college and graduate level courses.
 % % \item Been teaching assistant and helped professors to grade homework, proctor exams, and compile student achievement statistics for many courses.
 % \item Stationed at CERN and dedicated to search for supersymmertic particles since 2015.
 % % \item Relocated to CERN since 2015. Analyzed large experimental datasets to search for supersymmertic particles among other duties.
-% \end{tightemize}
-% \sectionsep
+\end{tightemize}
+\sectionsep
 
 % \runsubsection{Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire (CERN)}
 % \runsubsection{The European Organization for Nuclear Research (CERN)}
 \runsubsection{CERN}
-\descript{Researcher}
+\descript{Research Scientist}
+% \descript{Data Analyst}
 % \descript{| Graduate Research Assistant}
-\location{Geneva, Switzerland | 2015 - 2018}
+\location{Geneva, Switzerland | 2015/03 - 2018/02}
 % \descript{Research Associate}
 % \location{Geneva, Swiss | 2015 - 2018}
 \begin{tightemize}
+\item Established and optimized the data analysis pipeline to reduce 80\% CPU time and improved key performance metrics.
+Programmed in Python to build decision tree and regression models for analysis team.
 % \item Mined data from the distributed LHC computing Grid using Python and BASH shell script.
-\item Established data processing pipeline to optimize the analysis processes and improve key performance metrics by 70\% using decision tree algorithm via Python.
+% \item Established data processing pipeline to optimize the analysis processes and improve key performance metrics by 70\% using decision tree algorithm via Python.
 % \item Established data processing pipeline to visualize data distributions and perform feature engineering for building model.
 % \item Performed data mining from the distributed LHC computing Grid using Python and BASH shell script.
 % \item Established data cleaning and processing pipeline to analyze data, visualize distributions, and select features.
@@ -119,8 +152,7 @@
 \item Built regression model and applied statistical methods to extract signal within 95\% confidence interval.
 % \item Developed a new method to calibrate the electron isolation efficiency and became the standard version of the collaboration.
 % \item Constructed classification model and improved the true positive rate of isolated electrons from 0.85 to 0.93.
-\item Improve true positive rate from 0.85 to 0.93 by developing a new classification model for the electron isolation efficiency which became the standard version for the collaboration.
-
+\item Improve true positive rate from 0.85 to 0.93 by developing a new classification model for the electron isolation efficiency which became the standard version for the collaboration. 
 % \item Performed the data mining from the distributed LHC computing Grid, applied data cleaning and feature engineering to select the significant data, visualized the data distributions, fitted the model using least chi-square regression, interpreted the results using statistical model within 95\% confidence intervals, and presented and documented the analysis findings.
 % \item Analyzed 30M+ events to improve the true positive rate of isolated electrons from 0.85 to 0.93 and the calibrated electron isolation efficiency became the standard version of the collaboration.
 % \item Implemented the decision tree based methods to maximize the significance and optimized the data selection processes.
@@ -139,8 +171,8 @@
 \sectionsep
 
 \runsubsection{Academia Sinica}
-\descript{Research Assistant}
-\location{Taipei, Taiwan | 2009 - 2011}
+\descript{Research Scientist}
+\location{Taipei, Taiwan | 2009/07 - 2011/07}
 \begin{tightemize}
 \item Discovered serious bugs in simulation programs by performing exploratory data analysis on simulated data.
 Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
@@ -157,9 +189,12 @@ Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
 
 \runsubsection{Taiwan Semiconductor Manufacturing Company}
 \descript{R\&D engineer}
-\location{Hsinchu, Taiwan | 2006 - 2009}
+\location{Hsinchu, Taiwan | 2006/12 - 2009/02}
 \begin{tightemize}
-\item Led and supported 7 projects of various device models and built model performance documents for clients.
+\item Led and supported 7 projects to build various models to predict the device performances and documented the model usages and performances.
+\item Developed a standard operating procedure (SOP) in analysis pipeline to reduced 5\% to 10\% model variance and instructed colleagues how to apply the SOP in their projects.
+\item Converted potential clients to paying clients by providing preliminary models matching clients' specifications.
+% \item Led and supported 7 projects of various device models and built model performance documents for clients.
 \item Coordinated effectively with cross-functional teams and clients to resolve issues with tight deadlines.
 % \item Programmed measurement system to automate data collection processes and reduced 30\% of manual-operation time.
 % \item Implemented regression algorithm for data fitting and validated model with advanced statistical method.
@@ -178,7 +213,7 @@ Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % % FOR RESUME
-\section{Projects}
+% \section{Side Projects}
 
 % \runsubsection{project name}
 % \descript{}
@@ -192,15 +227,15 @@ Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
 % \end{tightemize}
 % \sectionsep
 
-\runsubsection{Build recommender system using Yelp data challenge round 12 dataset} %(\href{https://github.com/ytatus94/Machine_Learning/blob/master/Yelp_data_challenge_round_12/Yelp_README.md}{\textcolor{blue}{GitHub link}})
-\descript{}
-\location{}
-\begin{tightemize}
-\item Built a restaurant recommender system to recommend top 5 restaurants using item-item similarity based collaborative filtering and matrix factorization based on users’ past visits and ratings.
-\item Applied natural language processing (NLP) and sentiment analysis techniques to classify the positive and negative reviews, being able to understand business performance based on users' reviews.
-\item Identified and understood the common user preference by clustering users into groups and inspecting the cluster centroid of each group.
-\end{tightemize}
-\sectionsep
+% \runsubsection{Build recommender system using Yelp data challenge round 12 dataset}  %(\href{https://github.com/ytatus94/Machine_Learning/blob/master/Yelp_data_challenge_round_12/Yelp_README.md}{\textcolor{blue}{GitHub link}})
+% \descript{}
+% \location{}
+% \begin{tightemize}
+% \item Built a restaurant recommender system to recommend top 5 restaurants using item-item similarity based collaborative filtering and matrix factorization based on users’ past visits and ratings.
+% \item Applied natural language processing (NLP) and sentiment analysis techniques to classify the positive and negative reviews, being able to understand business performance based on users' reviews.
+% \item Identified and understood the common user preference by clustering users into groups and inspecting the cluster centroid of each group.
+% \end{tightemize}
+% \sectionsep
 
 
 
@@ -210,26 +245,26 @@ Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
 % 4. Build a restaurant recommender system using collaborative filtering and matrix factorization based on user's past visits and ratings.
  
 
-\runsubsection{Users churn prediction of online music streaming platform} %(\href{https://github.com/ytatus94/Machine_Learning/tree/master/Music_Box/Musicbox_README.md}{\textcolor{blue}{GitHub link}})
-\descript{}
-\location{}
-\begin{tightemize}
-\item Scraped 35 GB dirty data from the Internet using Python BeautifulSoup package and created databases with comprehensive information to meet the needs for analysis.
-\item Used Spark to build data processing pipeline including data wrangling and feature engineering.
-\item Analyzed user behavior patterns and trends to get business insight and build users churn predictive model by leveraging both Sci-kit learn and Spark MLlib packages and achieved the AUC 0.90 and accuracy 0.82.
-\end{tightemize}
-\sectionsep
+% \runsubsection{Users churn prediction of online music streaming platform} %(\href{https://github.com/ytatus94/Machine_Learning/tree/master/Music_Box/Musicbox_README.md}{\textcolor{blue}{GitHub link}})
+% \descript{}
+% \location{}
+% \begin{tightemize}
+% \item Scraped 35 GB dirty data from the Internet using Python BeautifulSoup package and created databases with comprehensive information to meet the needs for analysis.
+% \item Used Spark to build data processing pipeline including data wrangling and feature engineering.
+% \item Analyzed user behavior patterns and trends to get business insight and build users churn predictive model by leveraging both Sci-kit learn and Spark MLlib packages and achieved the AUC 0.90 and accuracy 0.82.
+% \end{tightemize}
+% \sectionsep
 
-\runsubsection{Sequence-to-sequence natural language generation with deep neural networks} %(\href{https://github.com/ytatus94/Machine_Learning/blob/master/BitTiger_DS501/Seq2seq_text_generation_README.md}{\textcolor{blue}{GitHub link}})
-\descript{}
-\location{}
-\begin{tightemize}
-\item Collected large amount of dirty textual data from the Internet and processed data for the text generation.
-\item Used TensorFlow to construct a sequence-to-sequence model using RNN architecture with LSTM cells.
-\item Designed an end-to-end training procedure to achieve data-driven language modeling for the generation of poems by training more than 40,000 poems.
-\item Conducted parameters tuning and used GPU acceleration to obtain optimal speed for training the deep neural networks.
-\end{tightemize}
-\sectionsep
+% \runsubsection{Sequence-to-sequence natural language generation with deep neural networks} %(\href{https://github.com/ytatus94/Machine_Learning/blob/master/BitTiger_DS501/Seq2seq_text_generation_README.md}{\textcolor{blue}{GitHub link}})
+% \descript{}
+% \location{}
+% \begin{tightemize}
+% \item Collected large amount of dirty textual data from the Internet and processed data for the text generation.
+% \item Used TensorFlow to construct a sequence-to-sequence model using RNN architecture with LSTM cells.
+% \item Designed an end-to-end training procedure to achieve data-driven language modeling for the generation of poems by training more than 40,000 poems.
+% \item Conducted parameters tuning and used GPU acceleration to obtain optimal speed for training the deep neural networks.
+% \end{tightemize}
+% \sectionsep
 
 
 % \runsubsection{Real Lepton Efficiency}
@@ -277,8 +312,9 @@ Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
 \section{Education} 
 
 \runsubsection{University of Oklahoma}
-\descript{Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
-\location{Norman, OK | 2011 - 2018}
+% \descript{Ph.D. in Physics | Cum. GPA: 3.47 / 4.00}
+\descript{Ph.D. in Physics}
+\location{Norman, OK | 2011/08 - 2018/05}
 \begin{tightemize}
 \item Published 4 top journal papers and 5 conference notes, and presented in 2 conferences.
 \item 6 semesters teaching assistant for college and graduate level courses.
@@ -286,21 +322,23 @@ Programmed in C++ to redesign bug-free Monte Carlo simulation programs.
 \end{tightemize}
 \sectionsep
 
-% \runsubsection{National Taiwan University}
+\runsubsection{National Taiwan University}
 % \descript{M.S. in Physics | Cum. GPA: 3.86 / 4.00}
-% \location{Taipei, Taiwan | 2003 - 2006}
-% \begin{tightemize}
-% \item Won 3$^{rd}$ place graduate student thesis awards, The Physical Society of Taiwan, 2006.
-% \end{tightemize}
-% \sectionsep
+\descript{M.S. in Physics}
+\location{Taipei, Taiwan | 2003 - 2006}
+\begin{tightemize}
+\item Won 3$^{rd}$ place graduate student thesis awards, The Physical Society of Taiwan, 2006.
+\end{tightemize}
+\sectionsep
 
-% \runsubsection{Chung Yuan Christian University}
+\runsubsection{Chung Yuan Christian University}
 % \descript{| B.S. in Physics | Cum. GPA: 3.53 / 4.00}
-% \location{1998 - 2002 | Chung Li, Taiwan}
-% \begin{tightemize}
-% \item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
-% \item Certificate of Academic Achievement Award, 2000 - 2001
-% \end{tightemize}
-% \sectionsep
+\descript{| B.S. in Physics}
+\location{Chung Li, Taiwan | 1998 - 2002}
+\begin{tightemize}
+\item Certificate of Holistic Achievement Award, 1998 - 1999, 1999 - 2000, and 2000 - 2001
+\item Certificate of Academic Achievement Award, 2000 - 2001
+\end{tightemize}
+\sectionsep
 
 \end{document}
