--- a/my_resume/2022/resume_2022.tex
+++ b/my_resume/2022/resume_2022.tex
@@ -82,23 +82,23 @@
     \end{minipage}}\fi%
   \par\addvspace{#1}}
 
-\newcommand*{\customcvproject}[4][.25em]{
-%   \vfill\noindent
-  \begin{tabular}{@{}l} 
-    {\bfseries #2}
-  \end{tabular}
-  \hfill% move it to the right
-  \begin{tabular}{l@{}}
-     {\itshape #3}
-  \end{tabular}
-  \ifx&#4&%
-  \else{\\%
-    \begin{minipage}{\maincolumnwidth}%
-      \small#4%
-    \end{minipage}}\fi%
-  \par\addvspace{#1}}
+% \newcommand*{\customcvproject}[4][.25em]{
+% %   \vfill\noindent
+%   \begin{tabular}{@{}l}
+%     {\bfseries #2}
+%   \end{tabular}
+%   \hfill% move it to the right
+%   \begin{tabular}{l@{}}
+%      {\itshape #3}
+%   \end{tabular}
+%   \ifx&#4&%
+%   \else{\\%
+%     \begin{minipage}{\maincolumnwidth}%
+%       \small#4%
+%     \end{minipage}}\fi%
+%   \par\addvspace{#1}}
 
-\setlength{\tabcolsep}{12pt}
+% \setlength{\tabcolsep}{12pt}
 
 %----------------------------------------------------------------------------------
 %            content
@@ -138,10 +138,11 @@
 \item Developed and maintained the essential deep-Q learning network (DQN) models in SCAS Autonomous Procurement \& Inventory (AP\&I) platform to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
 \item Reduced the inventory levels 30\% $\sim$ 70\%, which varies by warehouses and products, and retained low stock-outs by introducing the purchase-procurement splitting and postponed action methods into the model-based reinforcement learning (RL).
 \item Migrated the AP\&I platform from Stable-Baselines to Ray.
-\item Built interactive dashboards for visualizations and quick inspections. The dashboards were constructed on the DataStudio at the beginning, and then ported to Bokeh now.
-\item Implemented an abstraction layer on top of Azure and GCP to access the Azure storage account and Google Cloud storage. This layer provides the AP\&I cross-platform functionalities.
-\item Designed an universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
-\item Applied the time series analysis and forecasting methods to predict customers' demands and orders. The models been used including ETS, ARIMA/SARIMA, VAR, long-short term memory (LSTM), and double random forest (double RF). The $r^2$ score was improved from 0.15 (using ETS model) up to 0.92 (using double RF) and the number of supported products have been increased by a factor of 20 times.
+\item Analyzed supply chain data from various clients by writing SQL queries on the Google Big Query and PostgreSQL.
+\item Built interactive dashboards for visualizations and quick inspections. The dashboards were constructed on the Google DataStudio at the beginning, and then ported to Python with Bokeh package now.
+\item Implemented an abstraction layer (API), called Cloud I/O, on top of Azure and GCP to access the Azure storage account and Google Cloud storage. This Python-based API provides the AP\&I cross-platform functionalities.
+\item Designed a Python-based universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
+\item Applied the time series analysis and forecasting methods using Python and predicted customers' demands and orders. The models been used including ETS, ARIMA/SARIMA, VAR, long-short term memory (LSTM), and double random forest (double RF). The $r^2$ score was improved from 0.15 (using ETS model) up to 0.92 (using double RF) and the number of supported products have been increased by a factor of 20 times.
 % \item Time series forecasting to forecast customers' demand, ordering, purchase-procurement splitting with the X\% accuracy for different products and customers.
 % \item Built new LSTM models using Keras for demands and orders time series data predictions and improved the $r^2$ score from 0.15 to 0.94.
 % \item Developed and maintained reinforcement learning (RL) based framework using deep-Q learning (DQN) for single and multiple echelons to optimize the profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27. %Help the customers to safe Y\% of the cost and earn Z\% revenues.
@@ -173,8 +174,8 @@
 
 {\customcventry{2015/03 - 2018/03}{Data Scientist}{CERN (Organisation Europ\'{e}enne pour la Recherche Nucl\'{e}aire )}{Geneva, Switzerland}{}
 {\begin{itemize}
-  \item Improved the electron isolation efficiency from 93\% to 98\% by introducing the momentum distributions in spherical coordinate. This results became a new standard for all analysis at CERN.
-  \item Analyzed 400 TB data from the LHC computing Grid, built decision tree and regression models, applied statistical methods to extract the signal within 95\% confidence interval.
+  \item Improved the electron isolation efficiency from 93\% to 98\% by introducing the momentum distributions in spherical coordinate. The study was done using C++. This results became a new standard for all analysis at CERN.
+  \item Analyzed 400 TB data from the LHC computing Grid using C++ with ROOT and Python with PyROOT, built decision tree and regression models, applied statistical methods to extract the signal within 95\% confidence interval.
 \end{itemize}
 }
 
@@ -186,7 +187,7 @@
 
 {\customcventry{2006/12 - 2009/02}{R\&D Engineer}{TSMC (Taiwan Semiconductor Manufacturing Company)}{Hsinchu, Taiwan}{}
 {\begin{itemize}
-  \item Improved 40\% of the performance by creating and deploying on-prem analysis pipeline, which includes high level data cleaning, engineering, visualization, statistical model building, and MC simulation. 
+  \item Improved 40\% of the performance by creating and deploying on-prem analysis pipeline, which includes high level data cleaning, engineering, visualization, statistical model building, and MC simulation using Bash shell script and Excel VBA.
 \end{itemize}
 }
 
