--- a/my_resume/2022/resume_2022.tex
+++ b/my_resume/2022/resume_2022.tex
@@ -84,7 +84,7 @@
 
 % \newcommand*{\customcvproject}[4][.25em]{
 % %   \vfill\noindent
-%   \begin{tabular}{@{}l}
+%   \begin{tabular}{@{}l} 
 %     {\bfseries #2}
 %   \end{tabular}
 %   \hfill% move it to the right
@@ -135,10 +135,11 @@
 
 {\customcventry{2019/04 - present}{Data Scientist}{Seeloz Inc}{San Jose, CA}{}
 {\begin{itemize}
-\item Developed and maintained the essential deep-Q learning network (DQN) models in SCAS Autonomous Procurement \& Inventory (AP\&I) platform to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
+% \item Developed and maintained the essential deep-Q learning network (DQN) models in SCAS Autonomous Procurement \& Inventory (AP\&I) platform to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
+\item Developed and maintained the essential deep-Q learning network (DQN) models for inventory control to optimize profitability and minimize supply chain inefficiencies. The annual total inventory values are reduced from \$7.82M to \$5.77M (26\% lower) and the annual turnover rate is increased 44\% from 15.42 to 22.27.
 \item Reduced the inventory levels 30\% $\sim$ 70\%, which varies by warehouses and products, and retained low stock-outs by introducing the purchase-procurement splitting and postponed action methods into the model-based reinforcement learning (RL).
-\item Migrated the AP\&I platform from Stable-Baselines to Ray.
-\item Analyzed supply chain data from various clients by writing SQL queries on the Google Big Query and PostgreSQL.
+% \item Migrated the AP\&I platform from Stable-Baselines to Ray.
+\item Analyzed supply chain data from various clients by writing SQL queries on the Google Big Query and PostgreSQL. 
 \item Built interactive dashboards for visualizations and quick inspections. The dashboards were constructed on the Google DataStudio at the beginning, and then ported to Python with Bokeh package now.
 \item Implemented an abstraction layer (API), called Cloud I/O, on top of Azure and GCP to access the Azure storage account and Google Cloud storage. This Python-based API provides the AP\&I cross-platform functionalities.
 \item Designed a Python-based universal interface to submit batch jobs to Google AI platform, GKE, Azure VMSS, Azure ML, AKS, on-premises cluster, and local docker container.
@@ -187,7 +188,7 @@
 
 {\customcventry{2006/12 - 2009/02}{R\&D Engineer}{TSMC (Taiwan Semiconductor Manufacturing Company)}{Hsinchu, Taiwan}{}
 {\begin{itemize}
-  \item Improved 40\% of the performance by creating and deploying on-prem analysis pipeline, which includes high level data cleaning, engineering, visualization, statistical model building, and MC simulation using Bash shell script and Excel VBA.
+  \item Improved 40\% of the performance by creating and deploying on-prem analysis pipeline, which includes high level data cleaning, engineering, visualization, statistical model building, and MC simulation using Bash shell script and Excel VBA. 
 \end{itemize}
 }
 
